[FIXED] I fixed the font clipping on the my skills page

--- a/css/main.css
+++ b/css/main.css
@@ -157,6 +157,6 @@ h2 {
         height: 100vh;
         overflow-x: hidden;
         overflow-y: auto;
-        font-size: 14px;
+        font-size: 13px;
     }
 }
